fix 룰테스트
테스트